[project]
name = "jua"
version = "0.1.0"
description = "JUÁ — An Information Retrieval Corpus of Public Audit Court Rulings"
authors = [
    {name = "Jayr",email = "jayralencarpereira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
